--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,6 +7,14 @@
                 <h1><a href="">Django Blog</a></h1>
             </div>
 
+            {% for post in posts %}
+            <div>
+                <p>published: {{ post.published_date }}</p>        
+                <p><a href="">{{ post.title }}</a></h1>
+                <p>{{ post.text|linebreaks }}</p>        
+            </div>
+            {% endfor %} 
+
             <div>
                 <p>published: 14.06.2014, 12:14</p>
                 <h2><a href="">My first post</a></h2>
